ajout de la prise en charge du champs de recherches des transactions et savoir si nous sommes dans les transactions récurrentes ou non
